force-app/main/default/objects/KS__c/KS__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>KS</label>
</CustomObject>