force-app/main/default/objects/KS__c/fields/K12__c.field-meta.xml
<CustomField>
    <fullName>K12__c</fullName>
    <label>K12</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>