force-app/main/default/objects/KS__c/fields/K13__c.field-meta.xml
<CustomField>
    <fullName>K13__c</fullName>
    <label>K13</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>