force-app/main/default/objects/KS__c/fields/K1__c.field-meta.xml
<CustomField>
    <fullName>K1__c</fullName>
    <label>K1</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>