force-app/main/default/objects/KS__c/fields/KP__c.field-meta.xml
<CustomField>
    <fullName>KP__c</fullName>
    <label>KP</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>